@startuml
left to right direction

ENUM TipoTransacao {
  envio_moedas
  recarga_instituicao
  resgate_vantagem
}

class Usuario {
  - id: int
  - nome: String
  - email: String
  - senha: String
  - dataCadastro: Date
  + cadastrar(nome : string, senha : string) : void 
  + login(nome : string, senha : string) : void 
}

class Aluno extends Usuario {
  - CPF: String
  - RG: String
  - endereco: String
  - curso: String
  - saldoMoedas: int
}

class Professor extends Usuario {
  - CPF: String
  - departamento: String
  - saldoMoedas: int
  + enviarMoedas(aluno: Aluno, quantidade: int, motivo: String): void
}

class Empresa extends Usuario {
  - CNPJ: String
  - endereco: String
}

class InstituicaoEnsino {
  - MAXENVIOPARAPROFESSOR : int = 1000
  - id: int
  - CNPJ: String
  - endereco: String
  - professores: List<Professor>
  + registrarProfessor(professor: Professor) : void
  + enviarMoedas(professor : Professor, MAXMOEDASPORSEMESTRE : int) : void
}

class Vantagem {
  - id: int
  - nome: String
  - descricao: String
  - foto: String
  - custoMoedas: int
  - empresa : Empresa
  - data_cadastro : Date
  - ativo : Boolean
  + resgatarVantagem(): void
  + registrarVantagem(): void
}

class Transacao {
  - id: int
  - data: Date
  - tipo: TipoTransacao
  - valorMoedas: int
  - mensagem: String
  - codigoCupom: String
  - remetente: Usuario
  - destinatario: Usuario
}

Aluno "1" -- "*" Transacao : recebe/resgata
Professor "1" -- "*" Transacao : concede
Empresa "1" -- "*" Vantagem : oferece
Vantagem "1" -- "1" Transacao : utilizada_em
InstituicaoEnsino "1" -- "*" Aluno : possui
InstituicaoEnsino "1" -- "*" Professor : possui

@enduml